--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.338.0",
     "next": "14.1.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
+    "sonner": "^1.4.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0"
